udate code anbout and services

--- a/project/index.html
+++ b/project/index.html
@@ -1,37 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header class="header">
-      <img src="../images/img3.png" class="header-background" />
-      <div class="header-top">
-        <a href="#" class="header-top-logo">
-          <img src="../images/logo.png" alt="logo" class="header-logo-image" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <header class="header">
+    <img src="../images/img3.png" class="header-background" alt='img3' />
+    <img src="../images/img4.png" class="header-image top" alt='img4' />
+    <img src="../images/img2.png" class="header-image bottom" alt='img2' />
+    <div class="header-top">
+      <div class="header-top-item">
+        <a href="#" class="header-top-item logo">
+          <img src="../images/logo.png" alt="logo" class="header-logo-item logo-image" />
         </a>
 
-        <ul class="header-top-menu">
-          <li class="header-top-menu item">
-            <a href="#" class="header-top-menu item-link">Home</a>
+        <ul class="header-top-item menu">
+          <li class="header-top-item menu-item">
+            <a href="#" class="header-top-item menu-item-link">Home</a>
           </li>
-          <li class="header-top-menu item">
-            <a href="#" class="header-top-menu item-link">About us</a>
+          <li class="header-top-item menu-item">
+            <a href="#" class="header-top-item menu-item-link">About us</a>
           </li>
-          <li class="header-top-menu item">
-            <a href="#" class="header-top-menu item-link">Our Services</a>
+          <li class="header-top-item menu-item">
+            <a href="#" class="header-top-item menu-item-link">Our Services</a>
           </li>
-          <li class="header-top-menu item">
-            <a href="#" class="header-top-menu item-link">Support</a>
+          <li class="header-top-item menu-item">
+            <a href="#" class="header-top-item menu-item-link">Support</a>
           </li>
         </ul>
-
-        <a href="#" class="header-top-contact">Contact</a>
       </div>
-    </header>
-  </body>
+
+      <a href="#" class="header-top-contact">Contact</a>
+    </div>
+    <div class="header-body">
+      <div class="header-body-content">
+        <h1 class="header-body-content heading">Creative
+          <span>
+            Design Agency
+          </span>
+        </h1>
+        <p class="header-body-content desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis numquam ab maxime ut, nostrum iste?</p>
+        <a href="#" class="header-body-content more">
+          LEARN MORE
+        </a>
+      </div>
+      <img src="../images/img1.png" alt="img1" class="header-body-image" />
+
+    </div>
+  </header>
+  <section class="about">
+    <img src="../images/img5.png" alt="img5" class="about-image">
+    <div class="about-content">
+      <img src="../images/img6.png" class="about-content-image" alt='img6' />
+      <p class="about-content-title">ABOUT US</p>
+      <h2 class="about-content-heading">
+        Digital Agency
+        <span>Providing various</span>
+        <span>Services</span>
+      </h2>
+      <p class="about-content-desc">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloremque totam atque ducimus. Quam, ea!
+      </p>
+      <a class="about-content-more">
+        Learn more
+      </a>
+    </div>
+  </section>
+  <section class="services">
+    <img src="../images/img11.png" class="services-background" alt='img11' />
+    <div class="services-content-left">
+      <p class="services-content-left--title">OUR SERVICES</p>
+      <h2 class="services-content-left--heading">
+        We can take your
+        <span>bussiness to the</span>
+        <span>next level</span>
+      </h2>
+      <p class="services-content-left--desc">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloremque totam atque ducimus. Quam, ea!
+      </p>
+      <a class="services-content-left--more">
+        Learn more
+      </a>
+    </div>
+    <div class="services-content-right"></div>
+  </section>
+</body>
+
 </html>
