--- a/project/index.html
+++ b/project/index.html
@@ -1,95 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./styles/style.css" />
-  <title>Document</title>
-</head>
+  <body>
+    <header class="header">
+      <img src="../images/img3.png" class="header-background" alt="img3" />
+      <img src="../images/img4.png" class="header-image top" alt="img4" />
+      <img src="../images/img2.png" class="header-image bottom" alt="img2" />
+      <div class="header-top">
+        <div class="header-top-item">
+          <a href="#" class="header-top-item logo">
+            <img
+              src="../images/logo.png"
+              alt="logo"
+              class="header-logo-item logo-image"
+            />
+          </a>
 
-<body>
-  <header class="header">
-    <img src="../images/img3.png" class="header-background" alt='img3' />
-    <img src="../images/img4.png" class="header-image top" alt='img4' />
-    <img src="../images/img2.png" class="header-image bottom" alt='img2' />
-    <div class="header-top">
-      <div class="header-top-item">
-        <a href="#" class="header-top-item logo">
-          <img src="../images/logo.png" alt="logo" class="header-logo-item logo-image" />
-        </a>
+          <ul class="header-top-item menu">
+            <li class="header-top-item menu-item">
+              <a href="#" class="header-top-item menu-item-link">Home</a>
+            </li>
+            <li class="header-top-item menu-item">
+              <a href="#" class="header-top-item menu-item-link">About us</a>
+            </li>
+            <li class="header-top-item menu-item">
+              <a href="#" class="header-top-item menu-item-link"
+                >Our Services</a
+              >
+            </li>
+            <li class="header-top-item menu-item">
+              <a href="#" class="header-top-item menu-item-link">Support</a>
+            </li>
+          </ul>
+        </div>
 
-        <ul class="header-top-item menu">
-          <li class="header-top-item menu-item">
-            <a href="#" class="header-top-item menu-item-link">Home</a>
-          </li>
-          <li class="header-top-item menu-item">
-            <a href="#" class="header-top-item menu-item-link">About us</a>
-          </li>
-          <li class="header-top-item menu-item">
-            <a href="#" class="header-top-item menu-item-link">Our Services</a>
-          </li>
-          <li class="header-top-item menu-item">
-            <a href="#" class="header-top-item menu-item-link">Support</a>
-          </li>
-        </ul>
+        <a href="#" class="header-top-contact">Contact</a>
       </div>
-
-      <a href="#" class="header-top-contact">Contact</a>
-    </div>
-    <div class="header-body">
-      <div class="header-body-content">
-        <h1 class="header-body-content heading">Creative
-          <span>
-            Design Agency
-          </span>
-        </h1>
-        <p class="header-body-content desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis numquam ab maxime ut, nostrum iste?</p>
-        <a href="#" class="header-body-content more">
-          LEARN MORE
-        </a>
+      <div class="header-body">
+        <div class="header-body-content">
+          <h1 class="header-body-content heading">
+            Creative
+            <span> Design Agency </span>
+          </h1>
+          <p class="header-body-content desc">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
+            numquam ab maxime ut, nostrum iste?
+          </p>
+          <a href="#" class="header-body-content more"> LEARN MORE </a>
+        </div>
+        <img src="../images/img1.png" alt="img1" class="header-body-image" />
       </div>
-      <img src="../images/img1.png" alt="img1" class="header-body-image" />
-
-    </div>
-  </header>
-  <section class="about">
-    <img src="../images/img5.png" alt="img5" class="about-image">
-    <div class="about-content">
-      <img src="../images/img6.png" class="about-content-image" alt='img6' />
-      <p class="about-content-title">ABOUT US</p>
-      <h2 class="about-content-heading">
-        Digital Agency
-        <span>Providing various</span>
-        <span>Services</span>
-      </h2>
-      <p class="about-content-desc">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloremque totam atque ducimus. Quam, ea!
-      </p>
-      <a class="about-content-more">
-        Learn more
-      </a>
-    </div>
-  </section>
-  <section class="services">
-    <img src="../images/img11.png" class="services-background" alt='img11' />
-    <div class="services-content-left">
-      <p class="services-content-left--title">OUR SERVICES</p>
-      <h2 class="services-content-left--heading">
-        We can take your
-        <span>bussiness to the</span>
-        <span>next level</span>
-      </h2>
-      <p class="services-content-left--desc">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloremque totam atque ducimus. Quam, ea!
-      </p>
-      <a class="services-content-left--more">
-        Learn more
-      </a>
-    </div>
-    <div class="services-content-right"></div>
-  </section>
-</body>
-
+    </header>
+    <section class="about">
+      <img src="../images/img5.png" alt="img5" class="about-image" />
+      <div class="about-content">
+        <img src="../images/img6.png" class="about-content-image" alt="img6" />
+        <p class="about-content-title">ABOUT US</p>
+        <h2 class="about-content-heading">
+          Digital Agency
+          <span>Providing various</span>
+          <span>Services</span>
+        </h2>
+        <p class="about-content-desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+          doloremque totam atque ducimus. Quam, ea!
+        </p>
+        <a class="about-content-more"> Learn more </a>
+      </div>
+    </section>
+    <section class="services">
+      <img src="../images/img11.png" class="services-background" alt="img11" />
+      <div class="services-left">
+        <p class="services-left-title">OUR SERVICES</p>
+        <h2 class="services-left-heading">
+          We can take your
+          <span>bussiness to the</span>
+          <span>next level</span>
+        </h2>
+        <p class="services-left-desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+          doloremque totam atque ducimus. Quam, ea!
+        </p>
+        <a class="services-left-more"> Learn more </a>
+      </div>
+      <div class="services-right">
+        <div class="services-right-item">
+          <img
+            src="../images/img7.png"
+            alt="img7"
+            class="services-right-item-image"
+          />
+          <h4 class="services-right-item-title">UI/UX design</h4>
+          <p class="services-right-item-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+            dolores?
+          </p>
+        </div>
+        <div class="services-right-item">
+          <img
+            src="../images/img8.png"
+            alt="img8"
+            class="services-right-item-image"
+          />
+          <h4 class="services-right-item-title">Branding</h4>
+          <p class="services-right-item-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+            dolores?
+          </p>
+        </div>
+        <div class="services-right-item">
+          <img
+            src="../images/img9.png"
+            alt="img9"
+            class="services-right-item-image"
+          />
+          <h4 class="services-right-item-title">Games</h4>
+          <p class="services-right-item-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+            dolores?
+          </p>
+        </div>
+        <div class="services-right-item">
+          <img
+            src="../images/img10.png"
+            alt="img10"
+            class="services-right-item-image"
+          />
+          <h4 class="services-right-item-title">Marketing</h4>
+          <p class="services-right-item-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+            dolores?
+          </p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
