--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <title>Document</title>
   </head>
 
@@ -77,6 +78,7 @@
     </section>
     <section class="services">
       <img src="../images/img11.png" class="services-background" alt="img11" />
+      <!-- <img src="../images/img12.png" class="services-image" alt="img12" /> -->
       <div class="services-left">
         <p class="services-left-title">OUR SERVICES</p>
         <h2 class="services-left-heading">
@@ -139,6 +141,43 @@
             dolores?
           </p>
         </div>
+      </div>
+    </section>
+    <!-- <section class="testi">
+      <img src="../images/img15.png" class="testi-background" alt="img15" />
+      <h3 class="testi title">TESTIMONIALS</h3>
+      <h2 class="testi heading">What people say</h2>
+      <div class="testi content">
+        <p class="testi content-detail">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
+        </p>
+        <h4 class="testi content-heading">Zoltan Nemeth</h4>
+        <div class="testi content-star">
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+        </div>
+        <div class="testi content-button">
+
+        </div>
+      </div>
+    </section> -->
+    <section class="form">
+      <div class="form-left">
+        <h3 class="form-title">Contact us</h3>
+        <h2 class="form-heading">Don’t Hesitate to
+          Contact us for
+          any Information.</h2>
+        <p class="from-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam,.</p>
+      </div>
+      <div class="form-right">
+        <div class="form-right-input"></div>
+        <div class="form-right-input"></div>
+        <div class="form-right-input"></div>
+        <div class="form-right-submit"></div>
       </div>
     </section>
   </body>
