--- a/project/index.html
+++ b/project/index.html
@@ -10,175 +10,134 @@
   </head>
 
   <body>
-    <header class="header">
-      <img src="../images/img3.png" class="header-background" alt="img3" />
-      <img src="../images/img4.png" class="header-image top" alt="img4" />
-      <img src="../images/img2.png" class="header-image bottom" alt="img2" />
-      <div class="header-top">
-        <div class="header-top-item">
-          <a href="#" class="header-top-item logo">
+      <header class="header">
+        <img src="../images/img4.png" class="header-image top" alt="img4" />
+        <img src="../images/img2.png" class="header-image bottom" alt="img2" />
+        <div class="header-top">
+            <a href="#" class="header-logo">
+              <img src="../images/logo.png" alt="logo" />
+            </a>
+
+            <ul class="header-top-menu">
+              <li class="header-menu-item">
+                <a href="#" class="header-menu-link">Home</a>
+              </li>
+              <li class="header-menu-item">
+                <a href="#" class="header-menu-link">About us</a>
+              </li>
+              <li class="header-menu-item">
+                <a href="#" class="header-menu-link">Our Services</a
+                >
+              </li>
+              <li class="header-menu-item">
+                <a href="#" class="header-menu-link">Support</a>
+              </li>
+            </ul>
+          <div class="header-top-contact">
+            <a href="#" class="button button-contact">Contact</a>
+          </div>
+        </div>
+        <div class="header-body">
+          <div class="header-body-left">
+            <h1 class="header-heading">
+              Creative
+              <span> Design Agency </span>
+            </h1>
+            <p class="header-desc">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
+              numquam ab maxime ut, nostrum iste?
+            </p>
+            <a href="#" class="button header-more">
+              LEARN MORE
+            </a>
+          </div>
+          <img src="../images/img1.png" alt="img1" class="header-body-image" />
+        </div>
+      </header>
+      <section class="about">
+        <img src="../images/img5.png" alt="img5" class="about-image" />
+        <div class="about-content">
+          <img src="../images/img6.png" class="about-content-image" alt="img6" />
+          <p class="about-content-title">ABOUT US</p>
+          <h2 class="about-content-heading">
+            Digital Agency
+            <span>Providing various</span>
+            <span>Services</span>
+          </h2>
+          <p class="about-content-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam,.
+          </p>
+          <a class="button about-more"> Learn more </a>
+        </div>
+      </section>
+      <section class="services">
+        <!-- <img src="../images/img12.png" class="services-image" alt="img12" /> -->
+        <div class="services-left">
+          <p class="services-left-title">OUR SERVICES</p>
+          <h2 class="services-left-heading">
+            We can take your
+            <span>bussiness to the</span>
+            <span>next level</span>
+          </h2>
+          <p class="services-left-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam,.
+          </p>
+          <a class="button about-more"> Learn more </a>
+        </div>
+        <div class="services-right">
+          <div class="services-right-item">
             <img
-              src="../images/logo.png"
-              alt="logo"
-              class="header-logo-item logo-image"
+              src="../images/img7.png"
+              alt="img7"
+              class="services-right-image"
             />
-          </a>
-
-          <ul class="header-top-item menu">
-            <li class="header-top-item menu-item">
-              <a href="#" class="header-top-item menu-item-link">Home</a>
-            </li>
-            <li class="header-top-item menu-item">
-              <a href="#" class="header-top-item menu-item-link">About us</a>
-            </li>
-            <li class="header-top-item menu-item">
-              <a href="#" class="header-top-item menu-item-link"
-                >Our Services</a
-              >
-            </li>
-            <li class="header-top-item menu-item">
-              <a href="#" class="header-top-item menu-item-link">Support</a>
-            </li>
-          </ul>
+            <h4 class="services-right-title">UI/UX design</h4>
+            <p class="services-right-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+              dolores?
+            </p>
+          </div>
+          <div class="services-right-item">
+            <img
+              src="../images/img8.png"
+              alt="img8"
+              class="services-right-image"
+            />
+            <h4 class="services-right-title">Branding</h4>
+            <p class="services-right-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+              dolores?
+            </p>
+          </div>
+          <div class="services-right-item">
+            <img
+              src="../images/img9.png"
+              alt="img9"
+              class="services-right-image"
+            />
+            <h4 class="services-right-title">Games</h4>
+            <p class="services-right-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+              dolores?
+            </p>
+          </div>
+          <div class="services-right-item">
+            <img
+              src="../images/img10.png"
+              alt="img10"
+              class="services-right-image"
+            />
+            <h4 class="services-right-title">Marketing</h4>
+            <p class="services-right-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+              dolores?
+            </p>
+          </div>
         </div>
-
-        <a href="#" class="header-top-contact">Contact</a>
-      </div>
-      <div class="header-body">
-        <div class="header-body-content">
-          <h1 class="header-body-content heading">
-            Creative
-            <span> Design Agency </span>
-          </h1>
-          <p class="header-body-content desc">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-            numquam ab maxime ut, nostrum iste?
-          </p>
-          <a href="#" class="header-body-content more"> LEARN MORE </a>
-        </div>
-        <img src="../images/img1.png" alt="img1" class="header-body-image" />
-      </div>
-    </header>
-    <section class="about">
-      <img src="../images/img5.png" alt="img5" class="about-image" />
-      <div class="about-content">
-        <img src="../images/img6.png" class="about-content-image" alt="img6" />
-        <p class="about-content-title">ABOUT US</p>
-        <h2 class="about-content-heading">
-          Digital Agency
-          <span>Providing various</span>
-          <span>Services</span>
-        </h2>
-        <p class="about-content-desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-          doloremque totam atque ducimus. Quam, ea!
-        </p>
-        <a class="about-content-more"> Learn more </a>
-      </div>
-    </section>
-    <section class="services">
-      <img src="../images/img11.png" class="services-background" alt="img11" />
-      <!-- <img src="../images/img12.png" class="services-image" alt="img12" /> -->
-      <div class="services-left">
-        <p class="services-left-title">OUR SERVICES</p>
-        <h2 class="services-left-heading">
-          We can take your
-          <span>bussiness to the</span>
-          <span>next level</span>
-        </h2>
-        <p class="services-left-desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-          doloremque totam atque ducimus. Quam, ea!
-        </p>
-        <a class="services-left-more"> Learn more </a>
-      </div>
-      <div class="services-right">
-        <div class="services-right-item">
-          <img
-            src="../images/img7.png"
-            alt="img7"
-            class="services-right-item-image"
-          />
-          <h4 class="services-right-item-title">UI/UX design</h4>
-          <p class="services-right-item-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-            dolores?
-          </p>
-        </div>
-        <div class="services-right-item">
-          <img
-            src="../images/img8.png"
-            alt="img8"
-            class="services-right-item-image"
-          />
-          <h4 class="services-right-item-title">Branding</h4>
-          <p class="services-right-item-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-            dolores?
-          </p>
-        </div>
-        <div class="services-right-item">
-          <img
-            src="../images/img9.png"
-            alt="img9"
-            class="services-right-item-image"
-          />
-          <h4 class="services-right-item-title">Games</h4>
-          <p class="services-right-item-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-            dolores?
-          </p>
-        </div>
-        <div class="services-right-item">
-          <img
-            src="../images/img10.png"
-            alt="img10"
-            class="services-right-item-image"
-          />
-          <h4 class="services-right-item-title">Marketing</h4>
-          <p class="services-right-item-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-            dolores?
-          </p>
-        </div>
-      </div>
-    </section>
-    <!-- <section class="testi">
-      <img src="../images/img15.png" class="testi-background" alt="img15" />
-      <h3 class="testi title">TESTIMONIALS</h3>
-      <h2 class="testi heading">What people say</h2>
-      <div class="testi content">
-        <p class="testi content-detail">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
-        </p>
-        <h4 class="testi content-heading">Zoltan Nemeth</h4>
-        <div class="testi content-star">
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-        </div>
-        <div class="testi content-button">
-
-        </div>
-      </div>
-    </section> -->
-    <section class="form">
-      <div class="form-left">
-        <h3 class="form-title">Contact us</h3>
-        <h2 class="form-heading">Don’t Hesitate to
-          Contact us for
-          any Information.</h2>
-        <p class="from-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam,.</p>
-      </div>
-      <div class="form-right">
-        <div class="form-right-input"></div>
-        <div class="form-right-input"></div>
-        <div class="form-right-input"></div>
-        <div class="form-right-submit"></div>
-      </div>
-    </section>
+      </section>
   </body>
 </html>
