--- a/project/index.html
+++ b/project/index.html
@@ -73,7 +73,6 @@
         </div>
       </section>
       <section class="services">
-        <!-- <img src="../images/img12.png" class="services-image" alt="img12" /> -->
         <div class="services-left">
           <p class="services-left-title">OUR SERVICES</p>
           <h2 class="services-left-heading">
@@ -138,6 +137,75 @@
             </p>
           </div>
         </div>
+      </section>
+      <section class="testi">
+        <h3 class="testi-title">TESTIMONIALS</h3>
+        <h2 class="testi-heading">What people say</h2>
+        <div class="test-content">
+          <p class="testi-content-detail">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
+          </p>
+          <h4 class="testi-content-heading">Zoltan Nemeth</h4>
+          <div class="testi-content-star">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+          </div>
+          <div class="testi-content-button">
+
+          </div>
+        </div>
+      </section>
+      <section class="form">
+        <div class="form-left">
+          <h3 class="form-title">Contact us</h3>
+          <h2 class="form-heading">Don’t Hesitate to
+            Contact us for
+            any Information.</h2>
+          <p class="from-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam,.</p>
+        </div>
+        <div class="form-right">
+          <input class="form-right-input" placeholder="Full Name" />
+          <input class="form-right-input" placeholder="Email" />
+          <input class="form-right-input" placeholder="Message" />
+          <button class="button button-submit">
+            SUBMIT
+          </button>
+        </div>
+      </section>
+      <section class="footer">
+        <div class="footer-top">
+          <div class="footer-logo"></div>
+          <ul class="footer-menu">
+            <li class="footer-menu-item">
+              <a href="#" class="footer-menu-link">Home</a>
+            </li>
+            <li class="footer-menu-item">
+              <a href="#" class="footer-menu-link">About us</a>
+            </li>
+            <li class="footer-menu-item">
+              <a href="#" class="footer-menu-link">Our Services</a>
+            </li>
+            <li class="footer-menu-item">
+              <a href="#" class="footer-menu-link">Support</a>
+            </li>
+          </ul>
+          <div class="footer-social">
+            <div class="footer-social-item"></div>
+            <div class="footer-social-item"></div>
+            <div class="footer-social-item"></div>
+            <div class="footer-social-item"></div>
+          </div>
+        </div>
+        <div class="footer-coppy-right">
+          <p>
+            Copyright © Chirag Bactor 2020
+          </p>
+        </div>
+
       </section>
   </body>
 </html>
