--- a/project/index.html
+++ b/project/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Agency LandingPage</title>
   </head>
 
   <body>
+    <div class="wrapper">
       <header class="header">
         <img src="../images/img4.png" class="header-image top" alt="img4" />
         <img src="../images/img2.png" class="header-image bottom" alt="img2" />
@@ -44,8 +45,8 @@
               <span> Design Agency </span>
             </h1>
             <p class="header-desc">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-              numquam ab maxime ut, nostrum iste?
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Etiam vel dolor id nulla gravida blandit.
             </p>
             <a href="#" class="button header-more">
               LEARN MORE
@@ -141,7 +142,7 @@
       <section class="testi">
         <h3 class="testi-title">TESTIMONIALS</h3>
         <h2 class="testi-heading">What people say</h2>
-        <div class="test-content">
+        <div class="testi-content">
           <p class="testi-content-detail">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
           </p>
           <h4 class="testi-content-heading">Zoltan Nemeth</h4>
@@ -153,7 +154,8 @@
             <i class="fa fa-star"></i>
           </div>
           <div class="testi-content-button">
-
+            <i class="fa fa-long-arrow-alt-left"></i>
+            <i class="fa fa-long-arrow-alt-right"></i>
           </div>
         </div>
       </section>
@@ -207,5 +209,6 @@
         </div>
 
       </section>
+    </div>
   </body>
 </html>
