--- a/project/index.html
+++ b/project/index.html
@@ -70,7 +70,7 @@
             sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam,.
           </p>
-          <a class="button about-more"> Learn more </a>
+          <a class="button more"> Learn more </a>
         </div>
       </section>
       <section class="services">
@@ -86,7 +86,7 @@
             sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam,.
           </p>
-          <a class="button about-more"> Learn more </a>
+          <a class="button more"> Learn more </a>
         </div>
         <div class="services-right">
           <div class="services-right-item">
@@ -165,22 +165,31 @@
           <h2 class="form-heading">Don’t Hesitate to
             Contact us for
             any Information.</h2>
-          <p class="from-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          <p class="form-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam,.</p>
         </div>
         <div class="form-right">
-          <input class="form-right-input" placeholder="Full Name" />
-          <input class="form-right-input" placeholder="Email" />
-          <input class="form-right-input" placeholder="Message" />
-          <button class="button button-submit">
+          <label class="form-right-input">
+            <input type="text" placeholder="" value='JOHN DOE' />
+            <span class="input__label">Full Name</span>
+          </label>
+          <label class="form-right-input">
+            <input type="text" placeholder="Email" />
+          </label>
+          <label class="form-right-input">
+            <input type="text" placeholder="Message" />
+          </label>
+          <button class="button more">
             SUBMIT
           </button>
         </div>
       </section>
       <section class="footer">
         <div class="footer-top">
-          <div class="footer-logo"></div>
+          <a href="#" class="footer-logo">
+            <img src="../images/logo.png" alt="logo" />
+          </a>
           <ul class="footer-menu">
             <li class="footer-menu-item">
               <a href="#" class="footer-menu-link">Home</a>
@@ -196,18 +205,17 @@
             </li>
           </ul>
           <div class="footer-social">
-            <div class="footer-social-item"></div>
-            <div class="footer-social-item"></div>
-            <div class="footer-social-item"></div>
-            <div class="footer-social-item"></div>
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-youtube"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
           </div>
         </div>
-        <div class="footer-coppy-right">
+        <div class="footer-bottom">
           <p>
             Copyright © Chirag Bactor 2020
           </p>
         </div>
-
       </section>
     </div>
   </body>
