finish code css

--- a/project/index.html
+++ b/project/index.html
@@ -74,6 +74,7 @@
         </div>
       </section>
       <section class="services">
+        <img src="../images/img12.png" alt="img12" class="services-image">
         <div class="services-left">
           <p class="services-left-title">OUR SERVICES</p>
           <h2 class="services-left-heading">
@@ -140,27 +141,36 @@
         </div>
       </section>
       <section class="testi">
+        <img src="../images/img20.png" alt="img20" class="testi-image">
         <h3 class="testi-title">TESTIMONIALS</h3>
         <h2 class="testi-heading">What people say</h2>
         <div class="testi-content">
-          <p class="testi-content-detail">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
-          </p>
-          <h4 class="testi-content-heading">Zoltan Nemeth</h4>
-          <div class="testi-content-star">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-          </div>
-          <div class="testi-content-button">
-            <i class="fa fa-long-arrow-alt-left"></i>
-            <i class="fa fa-long-arrow-alt-right"></i>
+          <div class="mark1"></div>
+          <div class="mark2"></div>
+          <img src="../images/img4.png" alt="img4" class="image-left">
+          <img src="../images/img4.png" alt="img4" class="image-right">
+          <div class="testi-detail">
+
+            <p class="testi-content-detail">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
+            </p>
+            <h4 class="testi-content-heading">Zoltan Nemeth</h4>
+            <div class="testi-content-star">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <div class="testi-content-button">
+              <i class="fa fa-long-arrow-alt-left"></i>
+              <i class="fa fa-long-arrow-alt-right"></i>
+            </div>
           </div>
         </div>
       </section>
       <section class="form">
         <div class="form-left">
+          <img src="../images/img16.png" alt="img16">
           <h3 class="form-title">Contact us</h3>
           <h2 class="form-heading">Don’t Hesitate to
             Contact us for
@@ -170,19 +180,20 @@
             magna aliqua. Ut enim ad minim veniam,.</p>
         </div>
         <div class="form-right">
-          <label class="form-right-input">
-            <input type="text" placeholder="" value='JOHN DOE' />
-            <span class="input__label">Full Name</span>
-          </label>
-          <label class="form-right-input">
-            <input type="text" placeholder="Email" />
-          </label>
-          <label class="form-right-input">
-            <input type="text" placeholder="Message" />
-          </label>
-          <button class="button more">
-            SUBMIT
-          </button>
+          <img src="../images/img13.png" alt="img13">
+            <label class="form-right-input">
+              <input type="text" placeholder="" value='JOHN DOE' />
+              <span class="input__label">Full Name</span>
+            </label>
+            <label class="form-right-input">
+              <input type="text" placeholder="Email" />
+            </label>
+            <label class="form-right-input">
+              <input type="text" placeholder="Message" />
+            </label>
+            <button class="button more">
+              SUBMIT
+            </button>
         </div>
       </section>
       <section class="footer">
