--- a/project/index.html
+++ b/project/index.html
@@ -12,143 +12,147 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <img src="../images/img4.png" class="header-image top" alt="img4" />
-        <img src="../images/img2.png" class="header-image bottom" alt="img2" />
-        <div class="header-top">
-            <a href="#" class="header-logo">
-              <img src="../images/logo.png" alt="logo" />
-            </a>
+        <img src="./images/img4.png" class="header-image top" alt="img4" />
+        <img src="./images/img2.png" class="header-image bottom" alt="img2" />
+        <div class="container">
+          <div class="header-top">
+              <a href="#" class="header-logo">
+                <img src="./images/logo.png" alt="logo" />
+              </a>
 
-            <ul class="header-top-menu">
-              <li class="header-menu-item">
-                <a href="#" class="header-menu-link">Home</a>
-              </li>
-              <li class="header-menu-item">
-                <a href="#" class="header-menu-link">About us</a>
-              </li>
-              <li class="header-menu-item">
-                <a href="#" class="header-menu-link">Our Services</a
-                >
-              </li>
-              <li class="header-menu-item">
-                <a href="#" class="header-menu-link">Support</a>
-              </li>
-            </ul>
-          <div class="header-top-contact">
-            <a href="#" class="button button-contact">Contact</a>
+              <ul class="header-top-menu">
+                <li class="header-menu-item">
+                  <a href="#" class="header-menu-link">Home</a>
+                </li>
+                <li class="header-menu-item">
+                  <a href="#" class="header-menu-link">About us</a>
+                </li>
+                <li class="header-menu-item">
+                  <a href="#" class="header-menu-link">Our Services</a
+                  >
+                </li>
+                <li class="header-menu-item">
+                  <a href="#" class="header-menu-link">Support</a>
+                </li>
+              </ul>
+            <div class="header-top-contact">
+              <a href="#" class="button button--white">Contact</a>
+            </div>
           </div>
-        </div>
-        <div class="header-body">
-          <div class="header-body-left">
-            <h1 class="header-heading">
-              Creative
-              <span> Design Agency </span>
-            </h1>
-            <p class="header-desc">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Etiam vel dolor id nulla gravida blandit.
-            </p>
-            <a href="#" class="button header-more">
-              LEARN MORE
-            </a>
+          <div class="header-body">
+            <div class="header-info">
+              <h1 class="heading heading--white heading--big">
+                Creative
+                <span> Design Agency </span>
+              </h1>
+              <p class="text text--white">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Etiam vel dolor id nulla gravida blandit.
+              </p>
+              <a href="#" class="button button--cyan button--big">
+                LEARN MORE
+              </a>
+            </div>
+            <img src="./images/img1.png" alt="img1" class="header-body-image" />
           </div>
-          <img src="../images/img1.png" alt="img1" class="header-body-image" />
         </div>
       </header>
       <section class="about">
-        <img src="../images/img5.png" alt="img5" class="about-image" />
-        <div class="about-content">
-          <img src="../images/img6.png" class="about-content-image" alt="img6" />
-          <p class="about-content-title">ABOUT US</p>
-          <h2 class="about-content-heading">
-            Digital Agency
-            <span>Providing various</span>
-            <span>Services</span>
-          </h2>
-          <p class="about-content-desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam,.
-          </p>
-          <a class="button more"> Learn more </a>
-        </div>
+        <!-- <div class="container"> -->
+          <img src="./images/img5.png" alt="img5" class="about-image" />
+          <div class="about-content">
+            <img src="./images/img6.png" class="about-content-image" alt="img6" />
+            <h3 class="title">ABOUT US</h3>
+            <h2 class="heading">
+              Digital Agency
+              <span>Providing various</span>
+              <span>Services</span>
+            </h2>
+            <p class="text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua. Ut enim ad minim veniam,.
+            </p>
+            <a class="button button--orange"> Learn more </a>
+          </div>
+        <!-- </div> -->
       </section>
       <section class="services">
-        <img src="../images/img12.png" alt="img12" class="services-image">
-        <div class="services-left">
-          <p class="services-left-title">OUR SERVICES</p>
-          <h2 class="services-left-heading">
-            We can take your
-            <span>bussiness to the</span>
-            <span>next level</span>
-          </h2>
-          <p class="services-left-desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam,.
-          </p>
-          <a class="button more"> Learn more </a>
-        </div>
-        <div class="services-right">
-          <div class="services-right-item">
-            <img
-              src="../images/img7.png"
-              alt="img7"
-              class="services-right-image"
-            />
-            <h4 class="services-right-title">UI/UX design</h4>
-            <p class="services-right-content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-              dolores?
+        <img src="./images/img12.png" alt="img12" class="services-image">
+          <div class="services-left">
+            <h3 class="title">OUR SERVICES</h3>
+            <h2 class="heading">
+              We can take your
+              <span>bussiness to the</span>
+              <span>next level</span>
+            </h2>
+            <p class="text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua. Ut enim ad minim veniam,.
             </p>
+            <a class="button button--orange"> Learn more </a>
           </div>
-          <div class="services-right-item">
-            <img
-              src="../images/img8.png"
-              alt="img8"
-              class="services-right-image"
-            />
-            <h4 class="services-right-title">Branding</h4>
-            <p class="services-right-content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-              dolores?
-            </p>
+          <div class="services-right">
+            <div class="services-item">
+              <img
+                src="./images/img7.png"
+                alt="img7"
+                class="services-icon"
+              />
+              <h4 class="services-title">UI/UX design</h4>
+              <p class="text text--small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+                dolores?
+              </p>
+            </div>
+            <div class="services-item">
+              <img
+                src="./images/img8.png"
+                alt="img8"
+                class="services-icon"
+              />
+              <h4 class="services-title">Branding</h4>
+              <p class="text text--small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+                dolores?
+              </p>
+            </div>
+            <div class="services-item">
+              <img
+                src="./images/img9.png"
+                alt="img9"
+                class="services-icon"
+              />
+              <h4 class="services-title">Games</h4>
+              <p class="text text--small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+                dolores?
+              </p>
+            </div>
+            <div class="services-item">
+              <img
+                src="./images/img10.png"
+                alt="img10"
+                class="services-icon"
+              />
+              <h4 class="services-title">Marketing</h4>
+              <p class="text text--small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+                dolores?
+              </p>
+            </div>
           </div>
-          <div class="services-right-item">
-            <img
-              src="../images/img9.png"
-              alt="img9"
-              class="services-right-image"
-            />
-            <h4 class="services-right-title">Games</h4>
-            <p class="services-right-content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-              dolores?
-            </p>
-          </div>
-          <div class="services-right-item">
-            <img
-              src="../images/img10.png"
-              alt="img10"
-              class="services-right-image"
-            />
-            <h4 class="services-right-title">Marketing</h4>
-            <p class="services-right-content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-              dolores?
-            </p>
-          </div>
-        </div>
       </section>
       <section class="testi">
-        <img src="../images/img20.png" alt="img20" class="testi-image">
+        <img src="./images/img20.png" alt="img20" class="testi-image">
         <h3 class="testi-title">TESTIMONIALS</h3>
         <h2 class="testi-heading">What people say</h2>
         <div class="testi-content">
-          <div class="mark1"></div>
-          <div class="mark2"></div>
-          <img src="../images/img4.png" alt="img4" class="image-left">
-          <img src="../images/img4.png" alt="img4" class="image-right">
+          <!-- <div class="mark1"></div>
+          <div class="mark2"></div> -->
+          <img src="./images/img4.png" alt="img4" class="image-left">
+          <img src="./images/img4.png" alt="img4" class="image-right">
           <div class="testi-detail">
 
             <p class="testi-content-detail">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
@@ -170,7 +174,7 @@
       </section>
       <section class="form">
         <div class="form-left">
-          <img src="../images/img16.png" alt="img16">
+          <img src="./images/img16.png" alt="img16">
           <h3 class="form-title">Contact us</h3>
           <h2 class="form-heading">Don’t Hesitate to
             Contact us for
@@ -180,7 +184,7 @@
             magna aliqua. Ut enim ad minim veniam,.</p>
         </div>
         <div class="form-right">
-          <img src="../images/img13.png" alt="img13">
+          <img src="./images/img13.png" alt="img13">
             <label class="form-right-input">
               <input type="text" placeholder="" value='JOHN DOE' />
               <span class="input__label">Full Name</span>
@@ -199,7 +203,7 @@
       <section class="footer">
         <div class="footer-top">
           <a href="#" class="footer-logo">
-            <img src="../images/logo.png" alt="logo" />
+            <img src="./images/logo.png" alt="logo" />
           </a>
           <ul class="footer-menu">
             <li class="footer-menu-item">
